<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingRight="@dimen/margin_16"
    android:paddingLeft="@dimen/margin_16"
    android:layout_centerHorizontal="false"
    tools:context=".activity.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/logo"
        tools:ignore="ContentDescription,HardcodedText,ImageContrastCheck"
        android:contentDescription="TODO" />

    <com.ITS.mobieid.custom_text.RobotoBoldTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phoneNumber"
        android:textSize="26dp"
        android:textStyle="bold"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.ITS.mobieid.custom_text.RobotoLightEditText
            android:id="@+id/edit_countries"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="50dp"
            android:ems="10"
            android:inputType="text"
            android:textSize="24dp"
            android:maxWidth="80dp"
            android:minWidth="50dp"
            android:minHeight="48dp"
            android:text="+84" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <com.ITS.mobieid.custom_text.RobotoLightEditText
            android:id="@+id/edit_phoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="350dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/input_to_numberPhone"
            android:inputType="number"
            android:textSize="24dp"
            android:maxWidth="350dp"
            android:minWidth="350dp"
            android:minHeight="48dp"
            android:textColorHint="#8D6E63"
            tools:ignore="TextFields" />
    </LinearLayout>

    <Button
        android:id="@+id/btnAuthentic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/button"
        android:text="@string/btn_authentic"
        android:textColor="@color/white" />
    <ProgressBar
        android:id="@+id/progress_circular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:attr/progressBarStyleLarge"
        android:visibility="invisible"/>
    <com.ITS.mobieid.custom_text.RobotoBoldTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/or_send_otp"
        android:textSize="16sp"
        android:textStyle="italic"
        android:textAlignment="center"
        />

    <Button
        android:id="@+id/btnVoiceOTP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:textColor="@color/button"
        android:text="@string/voice_otp" />



</LinearLayout>